--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Q_A">5 Q &amp; A</string>
     <string name="Q_A_20">20 Q &amp; A</string>
-    <string name="finish">In case you thing that you have any issue please contact <br></br> <u> AppleDeveloperGroup@gmail.com</u></string>
+    <string name="finish">In case you thing that you have any issue please contact <u>AppleDeveloperGroup@gmail.com</u></string>
 </resources>
